[package]
name = "israeli_queue_etc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "various queues"
repository = "https://github.com/Cobord/israeli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "^2.0.2"
nonempty = "^0.10.0"
petgraph = {version="^0.6.4", feature = "stable_graph"}
anyhow = "^1.0.82"